...
            android:id="@+id/groupBuyerActions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonMakeOffer"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/action_make_offer" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonBuyNow"
                style="@style/Widget.HkuMarket.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_small"
                android:layout_weight="1"
                android:text="@string/action_buy_now" />
...
