<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/space_large"
    android:paddingTop="@dimen/space_medium"
    android:paddingEnd="@dimen/space_large"
    android:paddingBottom="@dimen/space_small">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.HkuMarket.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/offer_amount_hint"
        app:prefixText="HK$ ">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputOfferAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>
